usefull link update

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,3 +5,14 @@
 html, body {
     overflow-x: hidden;
 }
+
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
