links open in new tabs

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,3 +48,8 @@ ul li:before {
   position: absolute;
   margin-left: -20px;
 }
+
+.popup_container a {
+  /* text-decoration: underline; */
+  color: blue;
+}
